# OscilloscopeSerialGUI

./: .gitignore  configure.ac  makefile  oscilloscope_gui.py  setup.py
include/: usb_driver.h
src/: .usb_driver.cc.swp  makefile.am  tek_interface.h  tek_interface_linux.c  tekvisa.cc  tekvisaosc.c  tekvisaosc.ui  ui.c  ui.h  usb_driver.cc
